@@ -1,3 +1,9 @@
+2008-03-20  David Gilbert  <david.gilbert@object-refinery.com>
+
+    Bug 1920854:
+    * source/org/jfree/chart/plot/PiePlot3D.java
+    (draw): Move label drawing outside section loop.
+
 2008-03-19  David Gilbert  <david.gilbert@object-refinery.com>
 
     Patch 1902418:
